Added simple color gradient option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,10 @@ export(head5)
 export(printi)
 export(rm0var)
 export(sql_get)
+import(data.table)
+import(grDevices)
+import(graphics)
+import(stats)
+import(utils)
+importFrom(RMySQL,dbConnect)
+importFrom(RMySQL,dbGetQuery)
