--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: person("Kipp", "Johnson", email = "kipp.william.johnson@gmail.com",
   role = c("aut", "cre"))
 Description: A collection of miscellanious R functions
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
